--- a/src/index.html
+++ b/src/index.html
@@ -7,158 +7,190 @@
 	<title>Header com Bootstrap</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 
 <body>
 
-<header class="my-header py-4 px-5">
-	<div class="row align-items-center">
-		<div class="col-auto p-0">
-			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTH92jJHk_n3GSKPf4UvHEp776ncUnrqCx4dK6_tIU3A&s"
-						alt="Logo" style="max-width: 70px;">
-		</div>
-
-		<nav class="col navbar navbar-expand-lg">
-			<div class="collapse navbar-collapse">
-				<ul class="navbar-nav my-nav d-flex	flex-direction-r">
-					<li class="nav-item">
-						<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">Sobre</a>
-					</li>
-
-					<li class="nav-item">
-						<a class="my-button btn" href="https://www.navi.com.ai/startups">Startups</a>
-					</li>
-
-					<li class="nav-item my-dropdown-hover">
-						<span class="my-button btn">Pilares</span>
-						<div class="dropdown-menu my-main-drop my-dropdown-elements">
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/espa%C3%A7o">Espaço</a>
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/pesquisa">Pesquisa</a>
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/programa">Programa</a>
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/lab">Lab</a>
-						</div> 
-					</li>
-
-					<li class="nav-item my-dropdown-hover">
-						<span class="my-button btn">Iniciativas</span>
-						<div class="dropdown-menu my-main-drop my-dropdown-elements">
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-awards">Navi Awards</a>
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-bootcamp">Navi Bootcamp</a>
-							<a class="dropdown-item my-button btn" href="https://www.raies.org/">Raies</a>
-							<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/deep-tech-challenge">Deep Tech Challenge</a>
-							<a class="dropdown-item my-button btn" href="https://www.airespucrs.org/">Aires Pucrs</a>
-						</div> 
-					</li>
-					
-					<li class="nav-item">
-						<a class="my-button btn" href="https://www.navi.com.ai/contato">Contato</a>
-					</li>
-
-				</ul>
+	<header class="my-header py-4 px-5">
+		<div class="row align-items-center">
+			<div class="col-auto p-0">
+				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTH92jJHk_n3GSKPf4UvHEp776ncUnrqCx4dK6_tIU3A&s"
+					alt="Logo" style="max-width: 70px;">
 			</div>
-		</nav>
 
-		<div class="col-auto">
-			<a class="btn my-button">Button</a>
-			<a class="btn my-button" href="https://docs.google.com/forms/d/e/1FAIpQLSdVYoLwDvsJGyGjRMqHpM59ggQtJliA-3_oFrjr7jOj1m-1PA/viewform?usp=sf_link">Acelere</a>
+			<nav class="col navbar navbar-expand-lg">
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav my-nav d-flex	flex-direction-r">
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">Sobre</a>
+						</li>
+
+						<li>
+							<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">News</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/startups">Startups</a>
+						</li>
+
+						<li class="nav-item my-dropdown-hover">
+							<span class="my-button btn">Pilares</span>
+							<div class="dropdown-menu my-main-drop my-dropdown-elements">
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/espa%C3%A7o">Espaço</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/pesquisa">Pesquisa</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/programa">Programa</a>
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/lab">Lab</a>
+							</div>
+						</li>
+
+						<li class="nav-item my-dropdown-hover">
+							<span class="my-button btn">Iniciativas</span>
+							<div class="dropdown-menu my-main-drop my-dropdown-elements">
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-awards">Navi
+									Awards</a>
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-bootcamp">Navi
+									Bootcamp</a>
+								<a class="dropdown-item my-button btn" href="https://www.raies.org/">Raies</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/deep-tech-challenge">Deep Tech Challenge</a>
+								<a class="dropdown-item my-button btn" href="https://www.airespucrs.org/">Aires
+									Pucrs</a>
+							</div>
+						</li>
+
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/contato">Contato</a>
+						</li>
+
+					</ul>
+				</div>
+			</nav>
+
+			<div class="col-auto">
+				<a class="btn my-button">Button</a>
+				<a class="btn my-button"
+					href="https://docs.google.com/forms/d/e/1FAIpQLSdVYoLwDvsJGyGjRMqHpM59ggQtJliA-3_oFrjr7jOj1m-1PA/viewform?usp=sf_link">Acelere</a>
+			</div>
 		</div>
-	</div>
-</header>
+	</header>
 
 
 
-<main>
-	
-	<article class="article my-bg-img">
-		<div class="container text-center">
-		<h2 style="display:inline">Artigo 1</h2>
-		<p>Patrocinador Master</p>
+	<main>
+
+		<article class="article py-5 my-bg-img shadow">
+			<div class="text-center">
+				<h2 style="display:inline">Artigo 1</h2>
+				<p>Patrocinador Master</p>
+			</div>
+		</article>
+
+		<article class="article py-5 my-bg-repeat shadow">
+			<div class="text-center">
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+				<h2>Artigo 2</h2>
+				<p>Conteúdo do Artigo 2</p>
+			</div>
+		</article>
+
+		<article class="article py-5 shadow my-bg-img">
+			<div class="text-center">
+				<h2>Artigo 3</h2>
+				<p>Conteúdo do Artigo 3</p>
+			</div>
+		</article>
+
+		<article class="article py-5 my-bg-repeat shadow">
+			<div class="text-center">
+				<h2>Artigo 4</h2>
+				<p>Conteúdo do Artigo 4</p>
+			</div>
+		</article>
+
+
+	</main>
+
+	<footer class="m-0">
+		<div class="container-fluid my-header text-center py-4">
+			<div class="text-center mb-3 d-flex px-5 justify-content-center">
+				<a href="https://www.youtube.com/channel/UCO4cg-Ks9V7HQ-XyL1PPjrA" class="mx-4 my-icon">
+					<i class="fab fa-youtube"></i></a>
+				<a href="https://www.linkedin.com/in/navi-institucional-313654200/" class="mx-4 my-icon">
+					<i class="fab fa-linkedin"></i></a>
+				<a href="https://www.instagram.com/navi.ai/" class="mx-4 my-icon">
+					<i class="fab fa-instagram"></i></a>
+			</div>
+
+			<nav class="navbar navbar-expand-lg">
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav my-nav d-flex justify-content-around">
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">Sobre</a>
+						</li>
+
+						<li>
+							<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">News</a>
+						</li>
+
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/startups">Startups</a>
+						</li>
+
+						<li class="nav-item my-dropdown-hover">
+							<span class="my-button btn">Pilares</span>
+							<div class="dropdown-menu my-main-drop my-dropdown-elements">
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/espa%C3%A7o">Espaço</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/pesquisa">Pesquisa</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/programa">Programa</a>
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/lab">Lab</a>
+							</div>
+						</li>
+
+						<li class="nav-item my-dropdown-hover">
+							<div class="dropdown-menu my-main-drop my-dropdown-elements">
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-awards">Navi
+									Awards</a>
+								<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-bootcamp">Navi
+									Bootcamp</a>
+								<a class="dropdown-item my-button btn" href="https://www.raies.org/">Raies</a>
+								<a class="dropdown-item my-button btn"
+									href="https://www.navi.com.ai/deep-tech-challenge">Deep Tech Challenge</a>
+								<a class="dropdown-item my-button btn" href="https://www.airespucrs.org/">Aires
+									Pucrs</a>
+							</div>
+							<span class="my-button btn">Iniciativas</span>
+						</li>
+
+						<li class="nav-item">
+							<a class="my-button btn" href="https://www.navi.com.ai/contato">Contato</a>
+						</li>
+
+					</ul>
+				</div>
+			</nav>
+
+			<div>
+				<p class="text-white">&copy;2021 por NAVI AI New Ventures</p>
+			</div>
 		</div>
-	</article>
-	
-	<article class="article my-bg-repeat">
-		<div class="text-center">
-			<h2>Artigo 2</h2>
-			<p>Conteúdo do Artigo 2</p>
-			<h2>Artigo 2</h2>
-			<p>Conteúdo do Artigo 2</p>
-			<h2>Artigo 2</h2>
-			<p>Conteúdo do Artigo 2</p>
-		</div>
-	</article>
-		
-    <article class="article my-bg-img">
-      <div class="text-center">
-        <h2>Artigo 3</h2>
-        <p>Conteúdo do Artigo 3</p>
-      </div>
-    </article>
-
-    <article class="article my-bg-repeat">
-      <div class="text-center">
-        <h2>Artigo 4</h2>
-        <p>Conteúdo do Artigo 4</p>
-      </div>
-    </article>
-
-
-</main>
-
-  <footer class="m-0">
-	<div class="container-fluid text-center my-header">
-	  <div class="text-center mb-3">
-		<a href="#"><i class="fab fa-facebook"></i></a>
-		<a href="#"><i class="fab fa-twitter"></i></a>
-		<a href="#"><i class="fab fa-instagram"></i></a>
-	  </div>
-	  
-	  <nav class="navbar navbar-expand-lg">
-		<div class="collapse navbar-collapse">
-			<ul class="navbar-nav my-nav d-flex justify-content-around">
-				<li class="nav-item">
-					<a class="my-button btn" href="https://www.navi.com.ai/noticias-artigos">Sobre</a>
-				</li>
-
-				<li class="nav-item">
-					<a class="my-button btn" href="https://www.navi.com.ai/startups">Startups</a>
-				</li>
-
-				<li class="nav-item my-dropdown-hover">
-					<span class="my-button btn">Pilares</span>
-					<div class="dropdown-menu my-main-drop my-dropdown-elements">
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/espa%C3%A7o">Espaço</a>
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/pesquisa">Pesquisa</a>
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/programa">Programa</a>
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/lab">Lab</a>
-					</div> 
-				</li>
-
-				<li class="nav-item my-dropdown-hover">
-					<span class="my-button btn">Iniciativas</span>
-					<div class="dropdown-menu my-main-drop my-dropdown-elements">
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-awards">Navi Awards</a>
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/navi-bootcamp">Navi Bootcamp</a>
-						<a class="dropdown-item my-button btn" href="https://www.raies.org/">Raies</a>
-						<a class="dropdown-item my-button btn" href="https://www.navi.com.ai/deep-tech-challenge">Deep Tech Challenge</a>
-						<a class="dropdown-item my-button btn" href="https://www.airespucrs.org/">Aires Pucrs</a>
-					</div> 
-				</li>
-				
-				<li class="nav-item">
-					<a class="my-button btn" href="https://www.navi.com.ai/contato">Contato</a>
-				</li>
-
-			</ul>
-		</div>
-	</nav>
-	  
-	  <div>
-		<p>&copy; 2024 Seu Site. Todos os direitos reservados.</p>
-	  </div>
-	</div>
-  </footer>
-  
-
+	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 </body>
