--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
 
 	<header class="my-header py-4 px-5">
 		<div class="w-100 row align-items-center">
-			<div class="col-auto p-0" style="min-width: 5%">
+			<a href="index.html" class="col-auto p-0" style="min-width: 5%">
 				<img src="images/logo-2.svg" alt="Logo" class="d-block">
-			</div>
+			</a>
 
 			<nav class="col navbar navbar-expand-lg">
 				<div class="collapse navbar-collapse">
@@ -71,7 +71,7 @@
 			</nav>
 
 			<div class="col-auto">
-				<a class="btn my-button">Button</a>
+				<div id="google_translate_element">aa</div>
 				<a class="btn my-button"
 					href="https://docs.google.com/forms/d/e/1FAIpQLSdVYoLwDvsJGyGjRMqHpM59ggQtJliA-3_oFrjr7jOj1m-1PA/viewform?usp=sf_link">Acelere</a>
 			</div>
@@ -232,7 +232,7 @@
 				</address>
 
 				<div>
-					<h5 class="text-white">Siga-nos nas redes sociais</h5>
+					<h5 class="text-white">Siga-nos nas Redes Sociais</h5>
 					<hr style="border: 1px solid white">
 					<div class="text-center mb-3 d-flex px-5 justify-content-center">
 						<a href="https://www.youtube.com/channel/UCO4cg-Ks9V7HQ-XyL1PPjrA" target="_blank" class="mx-4 my-icon">
