--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Trabalho do Flavio</title>
+	<title>NAVI Remake</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	<link rel="stylesheet" href="style.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -71,7 +69,6 @@
 			</nav>
 
 			<div class="col-auto">
-				<div id="google_translate_element">aa</div>
 				<a class="btn my-button"
 					href="https://docs.google.com/forms/d/e/1FAIpQLSdVYoLwDvsJGyGjRMqHpM59ggQtJliA-3_oFrjr7jOj1m-1PA/viewform?usp=sf_link">Acelere</a>
 			</div>
